# bookstore

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  sqlite3
.github/workflows/: build.yml  heroku-deploy.yml  worflow-pr.yml
bookstore/: settings.py  urls.py
bookstore/templates/: hello_world.html
order/: factory.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/viewsets/: __init__.py  order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/viewsets/: product_viewset.py
